removing administrative agreement boolean variable (#1949)
* removing administrative agreement boolean variable

* adding json ignore to visible for non owner variable

* code review